# wheelchair_nav

./: .gitignore  README.md  setup.bash
src/cable_trace_deploy/: package.xml  setup.py
src/cable_trace_deploy/cable_trace_deploy/: cable_trace_node.py  cnn_train_vel.py
src/kinoflow_controller/: CMakeLists.txt  kinoflow_controller_plugin.xml  package.xml
src/kinoflow_controller/cmake/: FindOnnxRuntime.cmake
src/kinoflow_controller/include/kinoflow_controller/: kinoflow_controller.hpp
src/kinoflow_controller/src/: kinoflow_controller.cpp
src/wc_control/: CMakeLists.txt  package.xml
src/wc_control/config/: wc_control.yaml  wc_control_cable_trace.yaml  wc_control_safe.yaml  wc_control_safe_v2.yaml
src/wc_control/launch/: multi_camera.launch.py  unified_wheelchair.launch.py
src/wc_control/wc_control/: imu_bias_corrector.py  imu_startup_calibrator.py  imu_wheelchair_republisher.py  wheelchair_sensors.launch.py
src/wheelchair_bringup/: CMakeLists.txt  package.xml
src/wheelchair_bringup/launch/: camera_fusion_test.launch.py  camera_fusion_visualization.launch.py  camera_test_minimal.launch.py  wheelchair_ablation_lidar_only.launch.py  wheelchair_ablation_stvl.launch.py  wheelchair_cable_trace.launch.py  wheelchair_data_collection.launch.py  wheelchair_fusion_localization.launch.py  wheelchair_fusion_nav.launch.py  wheelchair_kinoflow_cpp_nav.launch.py  wheelchair_kinoflow_nav.launch.py  wheelchair_lidar_mapping.launch.py  wheelchair_rtabmap_mapping.launch.py  wheelchair_slam_mapping.launch.py
src/wheelchair_e2e/: CMakeLists.txt  package.xml  setup.py
src/wheelchair_e2e/config/: e2e_params.yaml  modular_e2e_params.yaml
src/wheelchair_e2e/launch/: data_collection.launch.py  e2e_navigation.launch.py  kinoflow_navigation.launch.py
src/wheelchair_e2e/scripts/: bag_to_bev_velocity.py  cable_tracer_node.py  create_dummy_checkpoint.py  evaluate.py  evaluate_cross_platform.py  evaluate_kinoflow.py  export_dual_onnx.py  export_onnx.py  generate_synthetic_data.py  merge_sessions.py  prepare_cable_data.py  quantum_ablation_battery.py  quantum_noise_injection.py  quantum_plot_results.py  quantum_rosbag_eval.py  record_data.sh  smoke_test.py  smoke_test_pipeline.py  test_e2e_inference.py  train_cable_tracer.py  validate_cable_tracer.py  visualize_bev.py
src/wheelchair_e2e/wheelchair_e2e/: __init__.py  bev_generator.py
src/wheelchair_e2e/wheelchair_e2e/inference/: __init__.py  e2e_velocity_node.py  goal_manager.py  kinoflow_node.py  safety_clamp.py
src/wheelchair_e2e/wheelchair_e2e/models/: __init__.py  (+12 more)
src/wheelchair_firmware/: CMakeLists.txt  package.xml  wheelchair_hardware_interface_plugin.xml
src/wheelchair_firmware/config/: wheelchair_controllers.yaml
src/wheelchair_firmware/launch/: arduino_and_odometry.launch.py  arduino_receiver.launch.py  hardware_interface.launch.py  ros2_control_hardware_interface.launch.py  test_arduino.launch.py  test_robot_state.launch.py  test_wheelchair_hardware_interface.launch.py  wheelchair_complete.launch.py  wheelchair_complete_integrated.launch.py  wheelchair_complete_with_vision.launch.py  wheelchair_hardware_complete.launch.py  wheelchair_hardware_interface.launch.py  wheelchair_simple.launch.py
src/wheelchair_firmware/src/: wheelchair_interface.cpp
src/wheelchair_firmware/wheelchair_firmware/: imu_republisher.py
src/wheelchair_mono_depth/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/wheelchair_mono_depth/config/: da3_inference_front.yaml  da3_inference_front_v2.yaml  da3_inference_front_v3.yaml  data_collection.yaml  data_collection_v2.yaml  depth_comparison_benchmark.yaml  depth_comparison_benchmark_v2.yaml  depth_comparison_benchmark_v3.yaml  depth_comparison_benchmark_v4.yaml  depth_comparison_benchmark_v5.yaml  depth_comparison_benchmark_v6.yaml  depth_eval.yaml  inference.yaml  inference_multi.yaml  training_config.yaml  training_config_3090.yaml
src/wheelchair_mono_depth/launch/: data_collection.launch.py  depth_comparison_test.launch.py  depth_eval.launch.py  mono_depth_3cam_test.launch.py  mono_depth_inference.launch.py
src/wheelchair_mono_depth/scripts/: batch_da3_inference.py  depth_error_analysis.py  estimate_correction.py  export_da3_onnx.py  export_onnx.py  quick_capture_test.py  scan_comparison_recorder.py.tmp.6441.1772687819224  validate_collection.py  visualize_predictions.py  zero_shot_eval.py
src/wheelchair_mono_depth/wheelchair_mono_depth/: data_collection_node.py
src/wheelchair_navigation/: CMakeLists.txt  package.xml
src/wheelchair_navigation/behavior_tree/: wheelchair_kinoflow_cpp_nav.xml  wheelchair_kinoflow_nav.xml  wheelchair_navigation_w_replanning_and_recovery.xml  wheelchair_robust_nav.xml  wheelchair_robust_nav_v2.xml  wheelchair_robust_nav_v3.xml
src/wheelchair_navigation/config/: nav2_params_3cam.yaml  nav2_params_3cam_safe.yaml  nav2_params_3cam_v10.yaml  nav2_params_3cam_v11.yaml  nav2_params_3cam_v12.yaml  nav2_params_3cam_v13.yaml  nav2_params_3cam_v14.yaml  nav2_params_3cam_v15.yaml  nav2_params_3cam_v16.yaml  nav2_params_3cam_v17.yaml  nav2_params_3cam_v18.yaml  nav2_params_3cam_v19.yaml  nav2_params_3cam_v2.yaml  nav2_params_3cam_v20.yaml  nav2_params_3cam_v21.yaml  nav2_params_3cam_v22.yaml  nav2_params_3cam_v23.yaml  nav2_params_3cam_v24.yaml  nav2_params_3cam_v25.yaml  nav2_params_3cam_v26.yaml  nav2_params_3cam_v27.yaml  nav2_params_3cam_v28.yaml  nav2_params_3cam_v29.yaml  nav2_params_3cam_v3.yaml  nav2_params_3cam_v4.yaml  nav2_params_3cam_v5.yaml  nav2_params_3cam_v6.yaml  nav2_params_3cam_v7.yaml  nav2_params_3cam_v8.yaml  nav2_params_3cam_v9.yaml  nav2_params_ablation_lidar_only.yaml  nav2_params_ablation_lidar_only_v2.yaml  nav2_params_ablation_stvl.yaml  nav2_params_ablation_stvl_v2.yaml  nav2_params_hospital_v1.yaml  nav2_params_kinoflow.yaml  nav2_params_kinoflow_cpp.yaml  nav2_params_kinoflow_cpp_v2.yaml  nav2_params_restore_working.yaml  nav2_params_robust.yaml  (+4 more)
src/wheelchair_zupt/: package.xml  setup.cfg  setup.py
src/wheelchair_zupt/wheelchair_zupt/: ekf_fusion_node.py  improved_ekf_node.py  robust_ekf_zupt_node.py  zupt_node.py
(+177 files in other folders)
