<?xml version="1.0"?>
<package format="3">
  <name>cable_trace_deploy</name>
  <version>1.0.0</version>
  <description>Cable tracing CNN deployment node for wheelchair</description>
  <maintainer email="sidd@todo.todo">sidd</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
